Fix User spacing issues on long track names

--- a/src/css/components/User.scss
+++ b/src/css/components/User.scss
@@ -3,7 +3,6 @@
     flex-direction: row;
 
     width: 90%;
-    height: 58px;
     justify-content: space-between;
     align-items: center;
 }
